Fixed mobile display, fixed truncated word after optimisation

--- a/sources/sass/_cards.scss
+++ b/sources/sass/_cards.scss
@@ -70,7 +70,7 @@
     }
 
     p {
-        padding-top: 16px;
+        padding-top: 12px;
     }
 
     b:not(:first-child) {
@@ -80,7 +80,7 @@
 
 .card__content {
     position: relative;
-    padding: 0 16px 16px;
+    padding: 8px 16px 16px;
 }
 
 .card__race {
@@ -92,7 +92,7 @@
     background: $primary-color-1;
     border-radius: 12px;
     color: $color-white;
-    font-size: 24px;
+    font-size: 20px;
 
     &.-elf {
         background: $color-elf;
@@ -126,7 +126,7 @@
 }
 
 .card__name {
-    font-size: 24px;
+    font-size: 22px;
 }
 
 .card__choice {
