--- a/sources/sass/_game.scss
+++ b/sources/sass/_game.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     position: relative;
-    width: 80vw;
+    width: 88vw;
     max-width: 600px;
     height: 90vh;
     margin: auto;
