--- a/sources/sass/_score.scss
+++ b/sources/sass/_score.scss
@@ -29,6 +29,7 @@
     border-radius: 4px;
     opacity: 0;
     transform: translateX(-50%) scale(0.5);
+    text-align: center;
 
     &.-success {
         opacity: 1;
